# agent-orchestration

./: .gitignore  LICENSE  README.md  ROADMAP.md  oc_agent_discovery.py  pyproject.toml
agent-operator/: agent-crd.yaml  controller.py
bak/agent-operator/: README.md  pyproject.toml
deploy/: install-demo-env.sh  install-kagent.sh  kagent-values.yaml  ns.yaml
deploy/manifests/: datasciencecluster.yaml  rhoai-operator.yaml  serverless-operator.yaml  servicemesh-operator.yaml
docs/: EXAMPLE.md  README.md
docs/presentations/demo/: 01-intro.md  02-stack-overview.md  03-openshift-fit.md  04-demo.md  05-patterns.md  06-next-steps.md
examples/byo/: Dockerfile  README.md  agent.py  build-and-deploy.sh  deploy.sh  deploy.yaml  setup_all.sh  teardown.sh  teardown_all.sh
examples/byo/configs/: application-performance-monitor.yaml  cicd-pipeline-monitor.yaml  database-performance-monitor.yaml  message-queue-monitor.yaml  security-monitoring-agent.yaml
examples/byo/data/: default  (+4 more)
examples/declarative/: demo-agent.yaml
examples/kserve/: README.md  kagent-modelconfig.yaml  qwen-service.yaml  qwen-tiny-model.yaml
mcp/: oc_agent_bridge.py
mock_agent/: .env.example  Dockerfile  agent.py  deploy.sh  deployment.yaml  env  record.json  setup_all.sh  setup_central_jwks.sh  teardown.sh
mock_agent/configs/: kubernetes-cluster-monitor.yaml  message-queue-monitor.yaml
mock_agent/data/: cdn-xy-zz-0009-debug-agent.txt  cdn-xy-zz-0012-debug-agent.txt  database-performance-monitor.json  kubernetes-cluster-monitor.json  lb-xy-zz-0003-debug-agent.txt
tokens/: README.md
