[project]
name = "agent-orchestration"
version = "0.1.0"
description = "An exploration of Agents as a first class resource in Kubernetes and OpenShift clusters."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[all,http-server]>=0.3.5",
    "black>=25.9.0",
    "fastapi>=0.116.1",
    "authlib>=1.3.1",
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
]

[tool.uv.workspace]
members = [
    "agent-operator",
]
